fixed issue in flow